# udp-chat

./: CMakeLists.txt  Dockerfile  compose.yml
include/: common.h
include/chat/: common.h
include/client/: runtime.h
include/server/: runtime.h
src/: client.c  common.c  common.h  main.c  server.c
src/chat/: common.c
src/client/: client.c  client_runtime.c
src/server/: server.c  server_runtime.c
